--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,4 +31,4 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
-check-session-token: session
+check-session-token: token
