--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,12 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
 check-session-token: token
+jwt:
+  header: Authorization
+  secret: mySecret
+  #token失效时间
+  expiration: 6048000
+  #登录失效时间（多长时间不操作重新登录）
+  expireTime: 1800
+  route.authentication.path: /auth
+  route.authentication.refresh: /refresh
